# TTSMM-EX

./: .eslintrc.js  .fallowrc.json  .gitattributes  .gitignore  .impeccable.md  .prettierignore  .sync.yml  CONTEXT.md  DESIGN.json  DESIGN.md  README.md  STACK_REFACTOR_PLAN.md  biome.jsonc  electron.vite.config.ts  eslint.config.cjs  knip.json  knip.jsonc  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  terratech-steam-mod-loader.code-workspace  tsconfig.base.json  tsconfig.json  tsconfig.main.json  tsconfig.node.json  tsconfig.preload.json  tsconfig.renderer.json  vite.config.ts  vitest.bench.config.mts  vitest.config.ts  vitest.setup.ts
.erb/configs/: webpack.config.base.ts  webpack.config.main.dev.ts  webpack.config.main.prod.ts  webpack.paths.ts  (+2 more)
.husky/: pre-commit  pre-push
.serena/: project.yml
.zed/: settings.json  tasks.json
assets/: assets.d.ts
docs/: README.md  development.md
native/block-lookup-extractor/: Cargo.toml
native/block-lookup-extractor/src/: main.rs
scripts/: after-pack-set-win-icon.cjs  build-block-lookup-extractor.ts  check-native-dep.ts  check-port-in-use.ts  clean.ts  electron-rebuild.ts  ensure-electron-binary.ts  guard-wsl-install.cjs  help.ts  link-modules.ts  package.ts  postinstall.ts  require-platform.ts  run-fallow.ts  run-with-clean-electron-env.ts  setup-steamworks.ts  smoke-steamworks.ts  smoke-ui.ts  steamworks-setup.ts  stop-dev.ts  version.ts  vite-build.ts  vite-dev.ts  wsl-pnpm  wsl-pnpm.ps1
test-support/: electron-common.ts  electron-main.ts  electron-renderer.ts
tools/: run-agent-ci.cjs
(+448 files in other folders)
