[package]
name = "block-lookup-extractor"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"
image = "0.24"
io_unity = { version = "0.3.0", features = ["external-class-handle", "external-class-handle-texture2d"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[patch.crates-io]
io_unity = { path = "vendor/io_unity" }
